rename README to correct format. Clean up unneccesary spacing in code. Fix font coding.

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,5 +15,5 @@
   background-color: beige;
 }
 .titles {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
 }
